# -CalendPro

./: .gitignore  README.md  docker-compose.yml
backend/: ARCHITECTURE.md  Dockerfile  GOOGLE_SETUP.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 665911120415_add_authjs_tables.py  66d7ada37c79_init.py  __init__.py  a924507a5ee6_add_image_and_email_verified_to_users.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  parser.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  calendar_source.py  external_event.py  mixins.py  oauth_account.py  plan.py  plan_block.py  plan_export.py  plan_export_item.py  task_batch.py  task_item.py  task_item_tag.py  task_tag.py  user.py  user_preference.py
backend/app/routers/: __init__.py  calendars.py  events.py  oauth.py  tasks.py
backend/app/schemas/: __init__.py  calendar.py  event.py  task.py
backend/app/services/: __init__.py  calendar_sync.py  event_manager.py  google_calendar.py  task_parser.py  task_service.py
frontend/: package.json  pnpm-lock.yaml  prisma.config.ts
frontend/prisma/: schema.prisma
frontend/src/: auth.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/api/register/: route.ts
frontend/src/app/calendar/: page.tsx
frontend/src/app/log/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: hooks.ts  page.tsx
frontend/src/components/: DailyScheduleView.tsx  sidebar-nav.tsx
